[metadata]
name = xdffuse-stefan.schramm
version = 0.0.1
author = Stefan Schramm
author_email = mail@stefanschramm.net
description = FUSE interface for mounting Amiga ADF floppy images using xdftools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stefanschramm/xdffuse
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = amitools >= 0.6.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    xdffuse = xdffuse.xdffuse:main

